--- a/MultiPageTheme/css/style.css
+++ b/MultiPageTheme/css/style.css
@@ -70,3 +70,21 @@ body {
 .form {
   max-width: 600px;
 }
+
+#page-header {
+  height: 200px;
+  background: url('../img/image1.jpg');
+  background-position: 0 -360px;
+  background-attachment: fixed;
+  color: #fff;
+  border-bottom: 1px #eee solid;
+  padding-top: 50px;
+}
+
+.about-img {
+  margin-top: -50px;
+}
+
+#icon-boxes i {
+  font-size: 50px;
+}
